Add Spring ioc, Log4j.