@@ -3,11 +3,13 @@ package ir.hri.core.repositories.impl;
 import ir.hri.core.entities.City;
 import ir.hri.core.repositories.CityRepository;
 import ir.hri.core.util.JPAUtility;
+import org.springframework.stereotype.Repository;
 
 import javax.persistence.EntityManager;
 import javax.persistence.Query;
 import java.util.List;
 
+@Repository
 public class CityRepositoryImpl implements CityRepository {
     EntityManager entityManager =
             JPAUtility.getEntityManager();
@@ -15,7 +17,7 @@ public class CityRepositoryImpl implements CityRepository {
     @Override
     public City findById(int id) throws Exception {
         Query query = entityManager.createQuery("select t from City t where t.id = :id");
-        query.setParameter("id", new Integer(id));
+        query.setParameter("id", Integer.valueOf(id));
         City city = (City) query.getSingleResult();
         return city;
     }
@@ -30,7 +32,7 @@ public class CityRepositoryImpl implements CityRepository {
     @Override
     public List<City> findByStateId(int stateId) throws Exception {
         Query query = entityManager.createQuery("select t from City t where t.stateId = :stateId");
-        query.setParameter("stateId", new Integer(stateId));
+        query.setParameter("stateId", Integer.valueOf(stateId));
         List<City> cityList = query.getResultList();
         return cityList;
     }
